[package]
name = "coverm"
version = "0.6.1"
authors = ["Ben Woodcroft <benjwoodcroft@gmail.com>"]
license = "GPL-3.0"
description = "Read coverage calculator for metagenomics"
homepage = "https://github.com/wwood/CoverM"
repository = "https://github.com/wwood/CoverM"
documentation = "https://github.com/wwood/CoverM"
readme = "README.md"
exclude = [ # Max upload is 10MB, as of writing test data was 15MB
  "tests/*",
]
default-run = "coverm"

[dependencies]
bio = "0.41.0"
rust-htslib = { version="0.40.*", default-features = false }
clap = { version="3.*", features = ["cargo"] } # cargo feature required for crate_version!
clap_complete = "3.*"
log = "0.4.*"
env_logger = "0.9.*"
nix = "0.24.*"
tempdir = "0.3.*"
tempfile = "3.*"
ansi_term = "0.12"
lazy_static = "1.4.0"
rand = "0.8.*"
serde = "1.0"
version-compare = "0.1.0"
# bird_tool_utils = "0.3.0"
bird_tool_utils = { git = "https://github.com/wwood/bird_tool_utils" }
# galah = "0.3.0"
galah = { git = "https://github.com/wwood/galah" }
bird_tool_utils-man = "0.4.0"
roff = "0.2.*"
needletail = "0.4.*"

[dev-dependencies]
assert_cli = "0.6.*"
# Run things before commit but not push
cargo-husky = { version="1", default-features = false, features=["precommit-hook", "run-cargo-fmt"] }

[profile.release]
strip = true
lto = true
