[package]
name = "coverm"
version = "0.7.0"
authors = ["Ben Woodcroft <benjwoodcroft@gmail.com>"]
license = "GPL-3.0"
description = "Read coverage calculator for metagenomics"
homepage = "https://github.com/wwood/CoverM"
repository = "https://github.com/wwood/CoverM"
documentation = "https://github.com/wwood/CoverM"
readme = "README.md"
exclude = [ # Max upload is 10MB, as of writing test data was 15MB
  "tests/*",
]
default-run = "coverm"

[dependencies]
bio = "2.0.*"
rust-htslib = { version="0.47.*", default-features = false }
clap = { version="4.*", features = ["cargo"] } # cargo feature required for crate_version!
clap_complete = "4.*"
log = "0.4.*"
env_logger = "0.11.*"
nix = { version="0.29.*", features = ["fs"] }
tempdir = "0.3.*"
tempfile = "3.*"
ansi_term = "0.12"
lazy_static = "1.4.0"
rand = "0.8.*"
serde = "1.0"
version-compare = "0.2.0"
# bird_tool_utils = "0.5.0"
bird_tool_utils = { git = "https://github.com/wwood/bird_tool_utils" }
# bird_tool_utils = { path = "../bird_tool_utils" }
galah = "0.4.0"
# galah = { git = "https://github.com/wwood/galah" }
bird_tool_utils-man = "0.4.0"
roff = "0.2.*"
needletail = "0.5.*"

[dev-dependencies]
assert_cli = "0.6.*"
# Run things before commit but not push
cargo-husky = { version="1", default-features = false, features=["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[profile.release]
strip = true
lto = true
